creations of scenarios for automated experiments

--- a/gendis_test.ipynb
+++ b/gendis_test.ipynb
@@ -10,9 +10,9 @@
     "from gendis.genetic import GeneticExtractor\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from data_extraction import DataExtractor\n",
-    "from trajectory_generator import TrajectoryGenerator\n",
-    "from utils import standardize_data\n",
+    "from tools.data_extraction import DataExtractor\n",
+    "from tools.trajectory_generator import TrajectoryGenerator\n",
+    "from tools.utils import standardize_data\n",
     "\n",
     "np.random.seed(1337)  # Random seed for reproducibility"
    ]
@@ -25,13 +25,13 @@
     {
      "ename": "TypeError",
      "evalue": "__init__() got an unexpected keyword argument 'reset_data'",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-19-dba3836f0d35>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mreset_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#reset_data = True\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtr_gen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTrajectoryGenerator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreset_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreset_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mtr_gen\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_generation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_test\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'reset_data'"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
