statistics and printing fixes

--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -23,11 +23,8 @@
    ],
    "source": [
     "import os \n",
-    "import numpy as np\n",
+    "import numpy as np100*11\n",
     "\n",
-    "\n",
-    "def exp_perc(exp):\n",
-    "    return exp\n",
     "\n",
     "values = []\n",
     "experiments = []\n",
@@ -41,8 +38,8 @@
     "            contents = f.read()\n",
     "            contents = str(contents)\n",
     "            contents = contents.split()\n",
-    "            values.append(float(contents[3]))\n",
-    "            experiments.append(int(contents[5]))\n",
+    "            values.append(float(contents[2]))\n",
+    "            #experiments.append(int(contents[5]))\n",
     "\n",
     "n_values = np.array(values)\n",
     "n_exp = np.array(experiments)\n",
