update settings and data_extraction (possible bug when passing two movements)

--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -23,9 +23,7 @@
    ],
    "source": [
     "import os \n",
-    "import numpy as np100*11\n",
-    "\n",
-    "\n",
+    "import numpy as np\n",
     "values = []\n",
     "experiments = []\n",
     "\n",
