logger ready, changes at turns for better bearing noise

--- a/notebooks/real_data_plotting.ipynb
+++ b/notebooks/real_data_plotting.ipynb
@@ -6,6 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "print(module_path)\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
     "# Pandas for managing datasets\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -180,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
