--- a/notebooks/error_analysis.ipynb
+++ b/notebooks/error_analysis.ipynb
@@ -6,6 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "print(module_path)\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "# Seaborn for plotting and styling\n",
@@ -259,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
