--- a/notebooks/statistics.ipynb
+++ b/notebooks/statistics.ipynb
@@ -22,6 +22,12 @@
     }
    ],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "print(module_path)\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
     "import os \n",
     "import numpy as np\n",
     "values = []\n",
